# capstoneGame

./: .gitignore  output.txt  readme.md
04_Demo/demo4/: Doxyfile
CIntegrationTest/: CMakeLists.txt  test2.cpp
CIntegrationTest/PythonCode/: Characters.py  Test.py
CIntegrationTest/include/: GameCharacter.h  ParticipantsList.h  ParticipantsVector.h  PlayerCharacter.h
CIntegrationTest/src/: GameCharacter.cpp  ParticipantsList.cpp  ParticipantsVector.cpp  test2.cpp
Demo_engine_clean/yourProject/: CMakeLists.txt
Final_Version_Game_Game_Engine/dev/: CMakeLists.txt
Final_Version_Game_Game_Engine/learning_folder/CMake/03_CMakeMacBetter/: CMakeLists.txt  readme.md
Final_Version_Game_Game_Engine/learning_folder/CMake/04_CMakeMacAndWin/: CMakeLists.txt  readme.md
Final_Version_Game_Game_Engine/learning_folder/CMake/10_CmakeTimerTest/: CMakeLists.txt
Final_Version_Game_Game_Engine/learning_folder/SDL/13_ChangeColor/: CMakeLists.txt
PyToCMigration/: CMakeLists.txt
PyToCMigration/include/: CMakeLists.txt  pch.h  setRoundTurns.h
PyToCMigration/include/Characters/: BaseCharacter.h
PyToCMigration/include/Characters/Players/: BasePlayer.h  Bass.h
PyToCMigration/include/Utility/: setRoundTurns.h
PyToCMigration/src/: test.cpp
PyToCMigration/src/Characters/: BaseCharacter.cpp
PyToCMigration/src/Characters/Players/: BasePlayer.cpp  Bass.cpp
PyToCMigration/src/Utility/: isTeamAlive.cpp  setRoundTurns.cpp
PyToCMigration/test/: BasePlayerTest.cpp  CMakeLists.txt  IsTeamAliveTest.cpp  test.cpp
ai/fuzzyLogic/: requirements.txt
docs/: _base_menu_8h_source.html  _base_single_texture_8h_source.html  _character_in_map_8h_source.html  _color_8h_source.html  _font_8h_source.html  _game_8h_source.html  _map_debug_controller_8h_source.html  _screen_8h_source.html  _text_box_8h_source.html  _texture_wrapper_8h_source.html  _tile_type_8h_source.html  class_archimedes-members.html  class_archimedes.html  class_base_menu-members.html  class_base_menu.html  class_base_single_texture-members.html  class_base_single_texture.html  class_character_in_map-members.html  class_character_in_map.html  class_color-members.html  class_color.html  class_dash_da_capo-members.html  class_dash_da_capo.html  class_font.html  class_map_debug_controller-members.html  class_map_debug_controller.html  class_text_box-members.html  class_text_box.html  class_texture_wrapper-members.html  class_texture_wrapper.html  class_tile-members.html  class_timer.html  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  game_engine_8h_source.html  hierarchy.html  menudata.js  (+1 more)
docs/html/: _base_menu_8h_source.html  _base_single_texture_8h_source.html  _character_direction_8h_source.html  _character_in_map_8h_source.html  _color_8h_source.html  _game_8h_source.html  _map_debug_controller_8h_source.html  _menu_in_game_8h_source.html  _screen_8h_source.html  _text_box_8h_source.html  _texture_wrapper_8h_source.html  _tile_8h_source.html  _tile_type_8h_source.html  _timer_8h_source.html  annotated.html  class_archimedes-members.html  class_archimedes.html  class_base_menu-members.html  class_base_menu.html  class_base_single_texture.html  class_character_in_map-members.html  class_character_in_map.html  class_color-members.html  class_color.html  class_dash_da_capo-members.html  class_dash_da_capo.html  class_font-members.html  class_map_debug_controller-members.html  class_map_debug_controller.html  class_menu-members.html  class_menu.html  class_text_box-members.html  class_text_box.html  class_texture_wrapper-members.html  class_texture_wrapper.html  class_tile-members.html  (+14 more)
everything_else/CIntegrationTest/: CMakeLists.txt
everything_else/CIntegrationTest/PythonCode/: setRoundTurns.py
everything_else/CIntegrationTest/include/: ParticipantsList.h
everything_else/CIntegrationTest/src/: GameCharacter.cpp  ParticipantsList.cpp
everything_else/PyToCMigration/include/: CMakeLists.txt
everything_else/PyToCMigration/include/Characters/: BaseCharacter.h
everything_else/PyToCMigration/include/Characters/Players/: BasePlayer.h  Bass.h
everything_else/PyToCMigration/include/Utility/: isTeamAlive.h
game_engine/dev/: CMakeLists.txt
game_engine/dev/include/: BaseMenu.h  BaseSingleTexture.h  CharacterInMap.h  Color.h  Game.h  MapDebugController.h  MenuInGame.h  Screen.h  TextBox.h  TextureWrapper.h  Tile.h  TileType.h  Timer.h  gameEngine.h  loadMedia.h  loadTiles.h  padMenuStrings.h  pch.h
game_engine/dev/include/Game/Characters/: BaseCharacter.h
game_engine/dev/include/Game/Items/: BaseItem.h
game_engine/dev/include/Game/Utility/: setRoundTurns.h
game_engine/dev/mapBuilder/: drunkardWalkTestMinusLibs.py
game_engine/dev/src/: BaseMenu.cpp  BaseSingleTexture.cpp  CharacterInMap.cpp  Game.cpp  MapDebugController.cpp  TextBox.cpp  TextureWrapper.cpp  Tile.cpp  Timer.cpp  gameEngine.cpp  gameLoop.cpp  main.cpp
game_engine/dev/src/Game/Characters/: BaseCharacter.cpp
game_engine/dev/src/Game/Items/: BaseItem.cpp
game_engine/drafts/: CMakeLists.txt  testLevel.map
game_engine/drafts/include/: MapDebugController.h  TextureWrapper.h  Tile.h  loadMedia.h  loadTiles.h
game_engine/drafts/src/: TextureWrapper.cpp  Tile.cpp  gameEngine.cpp
game_engine/learning_folder/CMake/01_CMakeSDL/: CMakeLists.txt  movingRedSquare.cpp
game_engine/learning_folder/CMake/02_CMakeWindows/: CMakeLists.txt
game_engine/learning_folder/CMake/05_CmakeMultiLibMac/: CMakeLists.txt  bgmusicTest.cpp
game_engine/learning_folder/CMake/06_CMakeDir/: CMakeLists.txt
game_engine/learning_folder/CMake/06_CMakeDir/include/: gameEngine.h
game_engine/learning_folder/CMake/07_SDLImageTest/: CMakeLists.txt
game_engine/learning_folder/OpenGL/01_HelloOpenGl/: CMakeLists.txt  Makefile  helloOpenGl.cpp
game_engine/learning_folder/OpenGL/01_HelloOpenGl/include/glad/: glad.h
game_engine/learning_folder/OpenGL/01_HelloOpenGl/src/: glad.c
procedural_maps/: drunkardWalkTest.py  drunkardWalkTestMinusLibs.py  output.txt  requirements.txt  testLevel.map  testLevel.txt
(+323 files in other folders)
